# -ora-brabo

./: CLAUDE.md  Makefile  README.md  app.py  install.sh  ora_brabo.sh  ora_brabo.tcss  pyproject.toml  requirements.txt
advisor/: engine.py
collectors/: advisor.py  alertlog.py  asm.py  awr.py  base.py  dg.py  exadata.py  health.py  io_activity.py  memory_advisor.py  objects.py  pdb.py  rac.py  rman.py  sessions.py  sql.py  sqlmon.py  waits.py
core/: cache.py  config.py  connection_manager.py  connection_session.py  connections_store.py  demo_data.py  scheduler.py
dolphie-main/: .gitignore  pyproject.toml
shell/: collect_asm.sh  collect_dg.sh  collect_rac.sh
unknow_dba/: ExadataPatching.sh  IORM.sql  connect_oracle_cpp.cpp  erase_disks.sql  exA_show_lun 2.sql  exa-racklayout 3.sh  exa-version.sql  exa-versions 3.sh  exa_asr_setup.sql  exa_batery_monitor 2.sh  exa_cellcli.sql  exa_check_cell_config 2.sh  exa_check_valid_cell_alerts 2.sql  exa_create_alter_and_drop_cellcli 2.sql  exa_create_celldisk_and_griddisks 2.sql  exa_create_diskgroup_ddl.sql  exa_disk_creation_and_management 2.sql  exa_disk_status 2.sh  exa_diskmap.sql  exa_disks.sql  exa_exadata_essentia_1Z0_536 2.sql  exa_exascalle_space.sql  exa_flashcache_data 2.sh  exa_get_ilom_snapshot.sql  exa_hcc.sql  exa_howsmart 2.sh  exa_increase_size_griddisk 2.sql  exa_infiniband.sql  exa_install_ogg 2.sql  exa_io_cell_offload_eligible_byte 2.sql  exa_ipmitool.sql  exa_issues 2.sql  exa_led_monitor.sh  exa_machine_version 2.sh  exa_manage_exadata.sql  exa_ora_start_cellserver.sh  exa_ora_stop_cellserver 2.sh  (+41 more)
(+31 files in other folders)
